Dialog Inline: fix overflow issue and scrollbar issue (fylr only) for the "inline" dialog component. See #77014

--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -3082,8 +3082,11 @@ $layer-sizes: (
 
 // detached from layer root, inline
 .cui-layer.cui-confirmation-dialog--show-inline {
-	// temp fix
-	z-index: 1;
+	flex: 1 0 auto;
+
+	> .cui-pane.cui-vertical-layout.cui-maximize-vertical > .cui-vertical-layout-center {
+		flex: 1 0 auto;
+	}
 }
 
 // Confirmation Choice
